2007-08-03  Atsushi Enomoto  <atsushi@ximian.com>

	* DTDObjectModel.cs : in 2.0 and especially 2.1 profiles, use
	  our own DictionaryBase-like generic type. It is to reduce
	  dependency on DictionaryBase which does not exist in 2.1 mscorlib.
	  (included in 2.0 as well so that we do not skip NUnit tests so far)

2007-08-03  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlResolver.cs, XmlUrlResolver.cs, XmlSecureResolver.cs :
	  remove ICredential in NET_2_1 (they have to be explicitly removed
	  outside tuner work as ICredentials does not exist in 2.1 profile).
	  We cannot use WebRequest in 2.1 as well, so remove dependency on
	  it in GetEntity() (and added MonoTODO for non-file URLs).

2007-07-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriter.cs : in WriteNode(XPathNavigator,bool), default namespace
	  is broken. Fixed bug #82051.

2007-07-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReader.cs : looks like I introduced extra Settings check at
	  r69383. Fixed bug #82062.

2007-07-04  Atsushi Enomoto  <atsushi@ximian.com>

	* DTDValidatingReader2.cs :
	  we can remove NET_2_1 from this unused code in SL.

2007-07-04  Atsushi Enomoto  <atsushi@ximian.com>

	* DTDAutomata.cs DTDObjectModel.cs DTDReader.cs
	  DTDValidatingReader2.cs XmlException.cs XmlReader.cs
	  XmlReaderSettings.cs XmlWriter.cs :
	  Make System.Xml.Core.dll build easier, using NET_2_1.

	  DTD support is simply cut at this stage (as it largely depends on
	  sys.xml.schema stuff).

2007-06-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* XmlTextReader.cs: Expose ProhibitDtd on 1.0 profile too.

2007-06-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlNode.cs : InnerText is settable on XmlDocumentFragment (silly,
	  but since XmlDocumentFragment does not override this property
	  it must be handled here).

2007-06-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTextReader.cs : ReadStartElement() has bogus error message.

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>
